# naga

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  settings.py  setup.py
.github/workflows/: main.yml
docker/builder/: Dockerfile  do.sh  readme.md
docker/builder/fs/: builder.sh  stats.sh
docs/: dev.md
examples/: circle.py  console.py  global.py  meaning.py  simple.js  simple.py
ext/: .gitignore  STPyV8.py  naga.py  setup.py  setup.sh
ext/naga/: __init__.py  config.py  debug_support.py  naga_wrapper.py
ext/naga/aux/: __init__.py  aux_wrapper.py
ext/naga/toolkit/: __init__.py  toolkit_wrapper.py
gn/: .gitignore  .gn  BUILD.gn  README.md
gn/args/: base.gn  debug.gn  release.gn
scripts/: _config.sh  _lib.sh  build.sh  checkout-v8.sh  create-venv.sh  destroy-venv.sh  enter-depot-shell.sh  enter_depot_shell.sh  format.sh  gclient.sh  gen-build.sh  gen-compile-commands-db.sh  install-depot.sh  install-deps.sh  install-ubuntu.sh  nuke.sh  prepare-debug-python.sh  prepare-deps.sh  prepare-gn.sh  prepare-v8.sh  prepare-venv.sh  sync-examples-results.sh  test-examples.sh  test.sh  tidy.sh  workflow-ci.sh
src/: Aux.cpp  Aux.h  Base.h  Config.h  Context.cpp  Context.h  Debug.cpp  Debug.h  Engine.cpp  Engine.h  Eternals.cpp  Eternals.h  Exception.cpp  Exception.h  Features.h  ForwardDeclarations.h  Hospital.cpp  Hospital.h  Isolate.cpp  Isolate.h  IsolateLockerHolder.cpp  IsolateLockerHolder.h  JSContext.cpp  JSContext.h  JSEngine.cpp  JSEngine.h  JSEternals.cpp  JSEternals.h  JSException.cpp  JSException.h  JSHospital.cpp  JSHospital.h  JSIsolate.cpp  JSIsolate.h  JSIsolateRegistry.cpp  JSIsolateRegistry.h  JSLocker.cpp  JSLocker.h  JSNull.cpp  JSNull.h  (+140 more)
src/utf8/: checked.h  core.h  unchecked.h
tests/: test_Context.py  test_Engine.py  test_Isolate.py  test_Multithread.py  test_Wrapper.py
tests/examples_expectations/: circle.py.txt  console.py.txt  global.py.txt  meaning.py.txt
