is_component_build = false

use_custom_libcxx = false

v8_monolithic = true
v8_embedder_string = "-naga"
v8_enable_disassembler = false
v8_enable_i18n_support = true
v8_use_external_startup_data = false

fatal_linker_warnings = false

# this is needed for std::any under macOS
mac_deployment_target = "10.14.0"